Fix Harmony popover buttons being flush with their content.

When I wrote crrev.com/2888563004 I didn't realize that Harmony popover
bubbles were relying on the special case in DialogClientView to space
out their buttons and their content. This patch completely removes that
special case and makes the spacing explicit. It also includes some minor
opportunistic cleanup.

BUG=727520

Review-Url: https://codereview.chromium.org/2932523003
Cr-Commit-Position: refs/heads/master@{#479251}

Former-commit-id: 02f8ec0767ac92101a2135f0f681528a16bda1ce