chrome/browser/ui/views/bookmarks/bookmark_bubble_view.cc
@@ -337,9 +337,11 @@ void BookmarkBubbleView::Init() {
       l10n_util::GetStringUTF16(IDS_BOOKMARK_AX_BUBBLE_FOLDER_LABEL));
   layout->AddView(parent_combobox_);
 
-  layout->AddPaddingRow(
-      kFixed,
-      provider->GetInsetsMetric(views::INSETS_DIALOG_CONTENTS).bottom());
+  if (provider->UseExtraDialogPadding()) {
+    layout->AddPaddingRow(
+        kFixed,
+        provider->GetInsetsMetric(views::INSETS_DIALOG_CONTENTS).bottom());
+  }
 
   AddChildView(bookmark_contents_view_);
 }
